--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.9",
-    "lodash": "^4.17.11",
     "vee-validate": "^2.2.11",
     "vue": "^2.6.10",
     "vue-meta": "^1.6.0",
     "vue-router": "^3.0.3",
+    "vue-router-sitemap": "0.0.4",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
