--- a/package.json
+++ b/package.json
@@ -8,26 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "core-js": "^2.6.9",
-    "vee-validate": "^2.2.11",
+    "axios": "^0.19.2",
+    "core-js": "^2.6.11",
+    "emailjs-com": "^2.4.1",
+    "vee-validate": "^2.2.15",
     "vue": "^2.6.10",
     "vue-meta": "^1.6.0",
-    "vue-router": "^3.0.3",
+    "vue-router": "^3.1.5",
     "vue-router-sitemap": "0.0.4",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.8.0",
+    "@vue/cli-plugin-babel": "^3.12.1",
     "@vue/cli-plugin-eslint": "^3.8.0",
-    "@vue/cli-service": "^3.8.4",
-    "@vue/eslint-config-airbnb": "^4.0.0",
-    "babel-eslint": "^10.0.2",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.5.21"
+    "@vue/cli-service": "^4.1.2",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^7.3.1",
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
