--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "vue",
+  "name": "samanrashidii",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "vue-cli-service build"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^2.6.11",
     "emailjs-com": "^2.4.1",
     "vee-validate": "^2.2.15",
-    "vue": "^2.6.10",
+    "vue": "^2.6.11",
     "vue-meta": "^1.6.0",
     "vue-router": "^3.1.5",
     "vue-router-sitemap": "0.0.4",
@@ -20,25 +19,10 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
-    "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-service": "^4.1.2",
     "node-sass": "^4.13.1",
     "sass-loader": "^7.3.1",
     "vue-template-compiler": "^2.6.11"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "@vue/airbnb"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
   },
   "postcss": {
     "plugins": {
